# practice-fast-api

./: .gitignore  README.md  asgi.py  conftest.py  main.py  pyproject.toml  test_simple.py
.github/workflows/: ci.yml
app/apis/v1/: meeting_router.py
app/configs/: __init__.py  base_config.py  tortoise_config.py
app/dtos/: create_meeting_response.py  frozen_config.py
app/tests/apis/v1/: test_meeting_router_mysql.py
app/tortoise_models/: meeting.py
app/utils/: base62.py  squids.py
